testsuite/tests/ghci/prog011/prog011.stderr

prog011.hx:14:22: error: [GHC-82311]
    Empty 'do' block
    Suggested fix:
      Perhaps you intended to use NondecreasingIndentation
      You may enable this language extension in GHCi with:
        :set -XNondecreasingIndentation
